--- a/src/app.html
+++ b/src/app.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet" />
 
+    <title>Stardex</title>
+
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
