--- a/src/app.html
+++ b/src/app.html
@@ -1,14 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#65a30d" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <meta name="theme-color" content="#65a30d" />
+    <meta property="description" content="Pokédex builder and analyzer." />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Stardex" />
+    <meta property="og:description" content="Pokédex builder and analyzer." />
+    <meta property="og:url" content="https://tipsypastels.github.io/stardex/" />
+    <meta
+      property="og:image"
+      content="%sveltekit.assets%/thumbnail.png"
+    />
+
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Itim&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Stardex</title>
 
