use an absolute url for og:image

--- a/src/app.html
+++ b/src/app.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://tipsypastels.github.io/stardex/" />
     <meta
       property="og:image"
-      content="%sveltekit.assets%/thumbnail.png"
+      content="https://tipsypastels.github.io/stardex/thumbnail.png"
     />
 
     <link
